<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/day_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="img_condition"
            android:src="@drawable/img_00d" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <GridLayout
                android:id="@+id/gridLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:columnCount="1" >

                <TextView
                    android:id="@+id/day_temp"
                    android:layout_width="match_parent"
                    android:layout_column="0"
                    android:layout_gravity="left"
                    android:layout_row="0"
                    android:gravity="center"
                    android:text="20"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="60sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_about"
                    android:layout_column="0"
                    android:layout_gravity="bottom|right"
                    android:layout_row="0"
                    android:text="@string/unit_temp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="20sp" />

            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/day_temp_min"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="right|center_vertical"
                    android:text="Min"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/temp_min"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="|"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/barre"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/day_temp_max"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="left|center_vertical"
                    android:text="Max"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/temp_max"
                    android:textSize="30sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/day_symbol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="Condition"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/day_symbol"
        android:layout_below="@+id/day_symbol" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp" >

            <TextView
                android:id="@+id/txt_precip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_precip"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/day_precip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.25"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/txt_precip_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_precip"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp" >

            <TextView
                android:id="@+id/txt_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_wind"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/day_windspeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="25"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/day_wind_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_wind_unit"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/day_winddirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="N"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp" >

            <TextView
                android:id="@+id/txt_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_pressure"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/day_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="989"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/txt_pressure_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_pressure_unit"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp" >

            <TextView
                android:id="@+id/txt_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_humidity"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/day_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="98"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/txt_humidity_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_humidity_unit"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>
    </TableLayout>

</RelativeLayout>