<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:visibility="visible"
    tools:context=".MainActivity" >

    <MultiAutoCompleteTextView
        android:id="@+id/fieldsearchville"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/Searchfield"
        android:imeOptions="actionSearch"
        android:inputType="text" >

        <requestFocus />
    </MultiAutoCompleteTextView>

    <Button
        android:id="@+id/bsearch"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fieldsearchville"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/Searchbutton" />

    <ProgressBar
        android:id="@+id/progressBar_connection"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fieldsearchville"
        android:layout_alignRight="@+id/bsearch"
        android:layout_below="@+id/fieldsearchville" />

    <TextView
        android:id="@+id/aff_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/progressBar_connection"
        android:text="@string/txt_def_fav"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/aff_site" >

        <LinearLayout
            android:id="@+id/listfav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

</RelativeLayout>